[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.17"
solana-sdk = "~1.10.34"
solana-program="~1.10.34"
anchor-client="0.25.0"
anyhow="1.0.66"
log = "0.4.16"
thiserror = "1.0.36"
home="0.5.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.14"
bond = { path = "../programs/bond", features = ["no-entrypoint"] }
spl-token="~3.3.0"
spl-associated-token-account="~1.0.0"