[package]
name = "bond"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bond"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["devnet"]
localhost=[]
devnet=[]
testnet=[]
mainnet=[]
[dependencies]
anchor-lang = "0.25.0"
anchor-spl="0.25.0"
num_enum="0.5.7"
pyth-sdk-solana = "0.6.1"